--- a/electric-android/app/build.gradle
+++ b/electric-android/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
     defaultConfig {
-        applicationId "ecom.github.electric_fields"
+        applicationId "com.github.fields.electric"
         minSdkVersion 14
         targetSdkVersion 25
         versionCode 1
