--- a/electric-android/app/src/main/AndroidManifest.xml
+++ b/electric-android/app/src/main/AndroidManifest.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="electric_fields.github.com.electricfields">
+    package="com.github.fields.electric">
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/Theme.Electric">
-        <activity android:name="com.github.electric_fields.MainActivity">
+        <activity android:name="com.github.fields.electric.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
