--- a/electric-android/app/build.gradle
+++ b/electric-android/app/build.gradle
@@ -39,6 +39,11 @@ android {
             signingConfig signingConfigs.release
         }
     }
+
+    lintOptions {
+        disable "AllowBackup"
+        disable "GoogleAppIndexingWarning"
+    }
 }
 
 dependencies {
