--- a/electric-android/app/src/main/AndroidManifest.xml
+++ b/electric-android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.github.fields.electric">
+          package="com.github.fields.electric">
 
     <!-- Allow for save bitmap to file. -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
@@ -10,7 +10,9 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/Theme.Electric">
-        <activity android:name="com.github.fields.electric.MainActivity">
+        <activity
+            android:name="com.github.fields.electric.MainActivity"
+            android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
