--- a/electric-android/build.gradle
+++ b/electric-android/build.gradle
@@ -18,3 +18,10 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+ext {
+    androidBuildToolsVersion = "25.0.0"
+    androidBuildSdkVersion = 24
+    androidBuildMinSdkVersion = 15
+    androidBuildTargetSdkVersion = 24
+}
