--- a/electric-android/build.gradle
+++ b/electric-android/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.1.4-3'
+    ext.kotlin_version = '1.1.50'
     repositories {
         jcenter()
     }
@@ -23,8 +23,8 @@ task clean(type: Delete) {
 }
 
 ext {
-    androidBuildToolsVersion = "26.0.1"
-    androidBuildSdkVersion = 26
+    androidBuildToolsVersion = "25.0.3"
+    androidBuildSdkVersion = 25
     androidBuildMinSdkVersion = 15
-    androidBuildTargetSdkVersion = 26
+    androidBuildTargetSdkVersion = 25
 }
