--- a/electric-android/app/build.gradle
+++ b/electric-android/app/build.gradle
@@ -48,6 +48,8 @@ android {
 
     lintOptions {
         disable "AllowBackup"
+        disable "AlwaysShowAction"
+        disable "ClickableViewAccessibility"
         disable "GoogleAppIndexingWarning"
     }
 }
