--- a/electric-android/app/build.gradle
+++ b/electric-android/app/build.gradle
@@ -58,4 +58,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
 }
