--- a/electric-android/app/build.gradle
+++ b/electric-android/app/build.gradle
@@ -59,4 +59,5 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    implementation "com.android.support:support-compat:$supportVersion"
 }
