--- a/electric-android/app/build.gradle
+++ b/electric-android/app/build.gradle
@@ -63,7 +63,9 @@ dependencies {
     // Rx
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
 
+    // AndroidX
+    implementation("androidx.core:core:1.3.1")
+
     // Testing
-    testImplementation 'junit:junit:4.12'
-    implementation "com.android.support:support-compat:$supportVersion"
+    testImplementation 'junit:junit:4.13'
 }
