--- a/electric-android/app/build.gradle
+++ b/electric-android/app/build.gradle
@@ -46,6 +46,11 @@ android {
         test.java.srcDirs += 'src/test/kotlin'
     }
 
+    compileOptions {
+        sourceCompatibility = JavaVersion.VERSION_1_8
+        targetCompatibility = JavaVersion.VERSION_1_8
+    }
+
     lintOptions {
         disable "AllowBackup"
         disable "AlwaysShowAction"
@@ -61,7 +66,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     // Rx
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
 
     // AndroidX
     implementation("androidx.core:core:1.3.1")
