--- a/electric-android/app/build.gradle
+++ b/electric-android/app/build.gradle
@@ -6,12 +6,12 @@ def versionMajor = Integer.parseInt(project.APP_VERSION_MAJOR)
 def versionMinor = Integer.parseInt(project.APP_VERSION_MINOR)
 
 android {
-    compileSdkVersion androidBuildSdkVersion
+    compileSdkVersion Extra.androidBuildSdkVersion
 
     defaultConfig {
         applicationId "com.github.fields.electric"
-        minSdkVersion androidBuildMinSdkVersion
-        targetSdkVersion androidBuildTargetSdkVersion
+        minSdkVersion Extra.androidBuildMinSdkVersion
+        targetSdkVersion Extra.androidBuildTargetSdkVersion
         versionCode versionMajor * 100 + versionMinor
         versionName versionMajor + '.' + versionMinor.toString().padLeft(2, '0')
 
@@ -63,7 +63,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     // Kotlin
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${Extra.kotlinVersion}"
 
     // Rx
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
