--- a/electric_flutter/android/settings.gradle
+++ b/electric_flutter/android/settings.gradle
@@ -1,3 +1,4 @@
+rootProject.name = "Electric Fields Flutter"
 include ':app'
 
 def localPropertiesFile = new File(rootProject.projectDir, "local.properties")
