--- a/electric-android/app/src/main/AndroidManifest.xml
+++ b/electric-android/app/src/main/AndroidManifest.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.github.fields.electric">
+    package="com.github.fields.electric">
 
     <!-- Allow for save bitmap to file. -->
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <uses-feature
         android:name="android.software.live_wallpaper"
-        android:required="false"/>
+        android:required="false" />
 
     <application
         android:allowBackup="true"
@@ -16,28 +16,28 @@
         android:theme="@style/Theme.Electric">
         <activity
             android:name="com.github.fields.electric.MainActivity"
+            android:exported="true"
             android:launchMode="singleTask">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
         <service
             android:name="com.github.fields.electric.wallpaper.ElectricFieldsWallpaperService"
             android:enabled="true"
+            android:exported="true"
             android:label="@string/app_name"
             android:permission="android.permission.BIND_WALLPAPER">
             <intent-filter>
-                <action android:name="android.service.wallpaper.WallpaperService">
-                </action>
+                <action android:name="android.service.wallpaper.WallpaperService"></action>
             </intent-filter>
 
             <meta-data
                 android:name="android.service.wallpaper"
-                android:resource="@xml/wallpaper">
-            </meta-data>
+                android:resource="@xml/wallpaper"></meta-data>
         </service>
     </application>
 
