--- a/electric_flutter/pubspec.yaml
+++ b/electric_flutter/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
   path_provider: ^2.0.5
+  image: ^3.1.0
+  share_plus: ^3.0.4
 
 dev_dependencies:
   flutter_test:
