--- a/electric_flutter/android/app/build.gradle
+++ b/electric_flutter/android/app/build.gradle
@@ -38,7 +38,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.github.fields.electric_flutter"
+        applicationId "com.github.fields.electric.flutter"
         minSdkVersion 16
         targetSdkVersion 30
         versionCode flutterVersionCode.toInteger()
