--- a/electric-android/app/src/main/AndroidManifest.xml
+++ b/electric-android/app/src/main/AndroidManifest.xml
@@ -29,12 +29,12 @@
             android:label="@string/app_name"
             android:permission="android.permission.BIND_WALLPAPER">
             <intent-filter>
-                <action android:name="android.service.wallpaper.WallpaperService"></action>
+                <action android:name="android.service.wallpaper.WallpaperService" />
             </intent-filter>
 
             <meta-data
                 android:name="android.service.wallpaper"
-                android:resource="@xml/wallpaper"></meta-data>
+                android:resource="@xml/wallpaper" />
         </service>
     </application>
 
