latest dependencies. don't notify every row.

--- a/electric_flutter/android/settings.gradle
+++ b/electric_flutter/android/settings.gradle
@@ -1,5 +1,4 @@
-rootProject.name = "Electric Fields Flutter"
-include ':app'
+include ":app"
 
 def localPropertiesFile = new File(rootProject.projectDir, "local.properties")
 def properties = new Properties()
