--- a/electric_flutter/pubspec.yaml
+++ b/electric_flutter/pubspec.yaml
@@ -18,19 +18,19 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: '>=3.0.6 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.0
-  path_provider: ^2.0.9
-  image: ^3.1.0
-  share_plus: ^3.1.0
+  cupertino_icons: ^1.0.6
+
+  path_provider: ^2.1.1
+  image: ^4.1.3
+  share_plus: ^7.1.0
 
 dev_dependencies:
   flutter_test:
